<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="password_hint">Input your password</string>
    <string name="password_error">Password at least 8 characters!</string>
    <string name="email_hint">ex: example@gmail.com</string>
    <string name="email_error">Enter a valid email address!</string>
    <string name="register">Register</string>
    <string name="username_hint">Input your username!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="fill_in_all_fields">Fill in all fields!</string>
    <string name="register_successfully">Register successfully!</string>
    <string name="register_failed">Register failed!</string>
    <string name="login_successfully">Login successfully!</string>
    <string name="login_failed">Login failed!</string>
    <string name="username_error">Fill in at least 2 characters!</string>
    <string name="data_not_found">Data not found</string>
    <string name="failed_to_get_data">Failed to get data</string>
    <string name="refresh">Refresh</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_logged_out">You logged out</string>
    <string name="detail_story">Detail Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="write_the_description_here">Write the description here</string>
    <string name="upload">Upload</string>
    <string name="not_allowed">Not allowed</string>
    <string name="add_story_successfully">Add story successfully</string>
    <string name="add_story_failed">Add story failed</string>
    <string name="data_not_complete">Data not complete</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="share_your_location">Share your location?</string>
    <string name="location_not_allowed">Location not allowed</string>
    <string name="please_allow_to_access_your_location">Please allow to access your location</string>
</resources>